--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,32 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <link rel="stylesheet" href="style.css">
+
+
+   <div>
+      <div class="grid1">
+         <h2 class="myProjectTitle">Your Projects</h2>
+         <h2>Announcement</h2>
+         
+         <div class="firstBox">
+            <div class="colorYellow">
+               
+            </div>
+            <div>
+               <p>Super Cool Project</p>
+            </div>
+         </div>
+         <div>
+
+         </div>
+      </div>
+
+   </div>
+
+
+
+
+
 </head>
 <body>
    
