--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
    <link rel="stylesheet" href="style.css">
 
 </head>
@@ -14,12 +15,66 @@
       <div class="dashboard">
    
          <!-- Personne 1 -->
+
+         <main>
+            <div class="Dashboard1">
+                <h1><span class="mdi mdi-view-dashboard" style="font-size: 30px"></span>Dashboard</h1>
+            </div>
+            <div class="menu">
+                <div class="smenu">
+                    <ul>
+                        <li><a><span class="mdi mdi-home" style="font-size: 20px"></span>&nbsp;&nbsp;Home</a></li>
+                        <li><span class="mdi mdi-account-box-outline" style="font-size: 20px"></span>&nbsp;&nbsp;Profile</li>
+                        <li><span class="mdi mdi-message-reply" style="font-size: 20px"></span>&nbsp;&nbsp;Messages</li>
+                        <li><span class="mdi mdi-clipboard-text-clock" style="font-size: 20px"></span>&nbsp;&nbsp;History</li>
+                        <li><span class="mdi mdi-file-multiple" style="font-size: 20px"></span></span>&nbsp;&nbsp;Tasks</li>
+                        <li><span class="mdi mdi-account-group" style="font-size: 20px"></span></span>&nbsp;&nbsp;communities</li>
+                    </ul>
+                </div>
+                <div class="smenu">
+                    <ul>
+                        <li><span class="mdi mdi-cog" style="font-size: 20px"></span>&nbsp;&nbsp;Settings</li>
+                        <li><span class="mdi mdi-help-box" style="font-size: 20px"></span>&nbsp;&nbsp;Support</li>
+                        <li><span class="mdi mdi-shield-check" style="font-size: 20px"></span>&nbsp;&nbsp;privacy</li>
+                    </ul>
+                </div>
+            </div>
+        </main>
    
       </div>
 
       <header>
 
          <!-- Personne 2 -->
+
+         <div class="entete">
+            <div class="recherche1">
+                <span class="mdi mdi-magnify" style="font-size: 20px; "></span>
+                <span class="sb"> <input type="search" name="searchbar" id="searchb"></span>
+            </div>
+            <div class="recherche2">
+                <span class="mdi mdi-bell-ring" style="font-size: 20px; "></span>
+                <span class="user"></span>
+                <span> <strong> Morgan Oakley</strong></span>
+            </div>
+
+            <div class="recherche" 3>
+                <div class="hithere">
+                    <div class="">
+                        <span class="user"> <img src="image/user.png" alt=""> </span>
+                    </div>
+                    <div class="">
+                        <p>Hi there,<br><strong> Morgan Oakley (@morgan) </strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="recherche4">
+                <input class="buttom" type="button" value="News">
+                <input class="buttom" type="button" value="upload">
+                <input class="buttom" type="button" value="Share">
+
+            </div>
+    </div>
    
       </header>
    
