--- a/admin.html
+++ b/admin.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <p>Bonjour</p>
-
-
-
-
-   <div class="container">
-      <header>head</header>
-      <nav>nav</nav>
-   </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css"/>
+  </head>
+  <body>
+    <div class="container">
+      <div class="dash">
+        <span class="mdi mdi-view-dashboard" style="font-size: 43px">Dashboard</span>
+      </div>
+      <div class="menu">
+        <span class="mdi mdi-home" style="font-size: 20px">Home</span>
+        <span class="mdi mdi-account-box-outline" style="font-size: 20px"
+          >Profile</span>
+        <span class="mdi mdi-message" style="font-size: 20px">Message</span>
+        <span class="mdi mdi-history" style="font-size: 20px">History</span>
+        <span class="mdi mdi-calendar-check" style="font-size: 20px">Tasks</span
+        >
+        <span class="mdi mdi-account-group" style="font-size: 20px">Communities</span>
+      </div>
+      <div class="menu1">
+        <span class="mdi mdi-cog" style="font-size: 20px">Setting</span>
+        <span class="mdi mdi-help-box" style="font-size: 20px">Support</span>
+        <span class="mdi mdi-tooltip-check" style="font-size: 20px">Privacy</span>
+      </div>
+    </div>
+  </body>
 </html>
